<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/color1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/custom1" />

    <TextView
        android:id="@+id/color2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/color1"
        android:layout_marginTop="0dp"
        android:background="@color/custom2" />

    <TextView
        android:id="@+id/color3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/color2"
        android:background="@color/custom3" />
    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/letto_round"
        android:contentDescription="@string/nama" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/gambar1"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jhs"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100sp"
        android:layout_marginStart="10sp"
        android:layout_below="@id/text2"/>
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shs"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_below="@id/text3"/>
    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/univ"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_below="@id/text4"/>
    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jhsgraduate"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="100sp"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/text3"
        android:layout_below="@id/text2"/>
    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shsgraduate"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/text4"
        android:layout_below="@id/text6"/>
    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/univyear"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_toEndOf="@id/text4"
        android:layout_below="@id/text7"/>
    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="70sp"
        android:layout_marginStart="10sp"
        android:layout_below="@id/text5"/>
</RelativeLayout>
